fix responsiveness on smaller screens

--- a/components/index_middle_content.less
+++ b/components/index_middle_content.less
@@ -63,23 +63,24 @@ p{font-size: 2rem;
         width: 50%;
         margin-top: 10%;
         font-size: 3rem;
-        line-height: 100%;}
+        line-height: 100%;
         @media @phone{
-            font-size: 2em;
+            font-size: 1em;
+            line-height: 1.3rem;
         }
         @media @tablet {
             font-size: 2.5rem;
             line-height: 3rem;
-        }
+        }}
         img{width: 50%;
             height: auto;
             border-radius: 34px;
             @media @phone{
                 width: 50%;
                 height: 10rem;
-                border-radius: 34px;
+                border-radius: 10px;
                 margin-left: 20px;
-                margin-top: 40%;
+                margin-top: 10%;
             }
             @media @tablet{
                 
